# OtomeKairo

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_otomekairo.sh
config/: default_settings.json  developer.toml
connectors/mcp_client/: README.md  config.example.json  pyproject.toml
connectors/mcp_client/src/otomekairo_mcp_client_connector/: __init__.py  __main__.py  app.py  config.py  elyth_fake_mcp_server.py  elyth_http_recorder.py  http.py  mcp_bridge.py  stdio_trace_proxy.py  stream.py  trace.py
connectors/tapo_c220/: README.md  config.example.json  pyproject.toml
connectors/tapo_c220/src/otomekairo_tapo_c220_connector/: __init__.py  __main__.py  app.py  capture.py  config.py  http.py  ptz.py  stream.py
docs/: 00_index.md  00_はじめに.md  01_現在地.md  01_目的とMVP.md  02_ユースケース.md  03_アーキテクチャ.md  04_人格と記憶.md  05_行動と能力.md  06_今後の設計論点.md  07_記憶検討メモ.md  08_記憶ユニット設計メモ.md  09_記憶更新規則メモ.md  10_target_architecture.md  10_エピソードと想起注入メモ.md  10_目標アーキテクチャ.md  11_RecallPack候補収集メモ.md  12_RecallHint生成メモ.md  13_想起と判断フロー図.md  13_記憶利用フロー図.md  14_想起と判断ユースケース検証.md  14_想起シナリオ検証メモ.md  15_記憶利用と判断分岐設計.md  20_external_interfaces.md  20_外部インタフェース.md  30_design_breakdown.md  30_システム設計.md  31_runtime_detail.md  31_ランタイム処理仕様.md  31_ランタイム処理契約.md  32_memory_detail.md  32_記憶設計.md  33_memory_job_contracts.md  33_記憶ジョブ仕様.md  33_記憶ジョブ契約.md  34_SQLite論理スキーマ.md  35_WebAPI仕様.md  35_WebAPI契約.md  36_JSONデータ仕様.md  37_起動初期化仕様.md  38_入力ストリーム運用仕様.md  (+8 more)
docs/console/: api_conversation.txt  api_wake.txt
docs/design/: 01_目的とMVP.md  02_ユースケース.md  02_用語表.md  03_アーキテクチャ.md  04_人格と記憶.md  05_判断と行動.md  05_行動と能力.md  06_状態モデル.md  06_設定と状態.md  07_構成モデル.md  07_設定モデル.md  07_設定操作契約.md  08_API概念.md  08_構成変更.md  08_設定変更.md  09_人格設定詳細.md  10_モデルプリセット詳細.md  10_モデル役割詳細.md  10_モデル構成詳細.md  11_外部接点とAPI概念.md  11_接続と認証.md  12_デバッグ可能性.md  12_接続と権限境界.md  13_デバッグ可能性.md  13_自発判断と自発行動.md  14_API仕様.md  15_保留意図候補のLLM選別.md  16_感情モデル.md  17_capability_manifest.md  18_時刻モデル.md  19_LLM補助契約共通.md  20_LLM判断優先方針.md  21_自律initiative_loop.md  22_world_state.md  23_vision_capture画像意味理解.md  24_対話画像入力.md  25_world_state_source_pack拡張.md  26_視覚機能.md  26_視覚機能実装設計.md  27_プロンプト文脈分離方針.md  (+4 more)
docs/note/: CocoroGhost_システムフロー図.md  CocoroGhost統合設計案.md  autonomous_embodiment_research_notes.md  chat_behavior_golden運用メモ.md  chat_replay_eval運用メモ.md  eval_gate運用メモ.md  memory_research_notes.md  memory_write_e2e運用メモ.md  research_takeaways.md  retrieval_eval運用メモ.md  retrieval_review_import運用メモ.md  retrieval_triage運用メモ.md  ココロゴースト_システムフロー図.md  自律行動システムの先行研究メモ.md  記憶設計に関する先行研究のメモ.md
docs/plan/: 01_MVP実装計画.md  01_現行計画.md  02_現行処理フロー.md  03_実装済み詳細.md  04_LLM寄せ移行計画.md
docs/reference/: 参考資料一覧.md  用語表.md
docs/roadmap/: 01_ロードマップ.md  01_未決論点.md
scripts/: debug_tapo_c220_connector.py  install_simple_system_service.sh  prepare_debug_env.sh  prepare_service_env.sh  prepare_tapo_c220_connector_debug_env.sh  run_dev_server.sh  run_long_smoke.py  run_service_all.sh  setup_venv.sh
sql/: core_schema.sql
src/otomekairo/: __init__.py  capabilities.py  defaults.py  event_stream.py  evidence.py  http_server.py  llm.py  llm_contexts.py  llm_contracts.py  llm_mock.py  llm_mock_capability.py  llm_mock_decision.py  llm_mock_memory.py  llm_mock_recall.py  log_stream.py  (+66 more)
tests/: test_autonomous_run.py  test_cognitive_context_api.py  test_config_store.py  test_current_config_api.py  test_decision_contract.py  test_decision_prompt_autonomous_wake.py  test_docs_api.py  test_input_interpretation_contract.py  test_mcp_capability.py  test_mcp_config_api.py  test_no_llm_text_truncation.py  test_persona_reference_style.py  test_wake_intervention_load.py  test_workspace_context.py
(+340 files in other folders)
