[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "otomekairo"
version = "0.1.0"
description = "OtomeKairo MVP server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "hiro9" }
]

[project.scripts]
otomekairo-run = "otomekairo.run:main"

[tool.setuptools.packages.find]
where = ["src"]
