[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "otomekairo"
version = "0.1.0"
description = "OtomeKairo server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache License 2.0" }
authors = [
  { name = "hiro9" }
]
dependencies = [
  "litellm>=1.0.0",
  "sqlite-vec>=0.1.6"
]

[project.scripts]
otomekairo-run = "otomekairo.run:main"

[tool.setuptools.packages.find]
where = ["src"]
