[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "otomekairo-mcp-client-connector"
version = "0.1.0"
description = "Generic MCP client connector for OtomeKairo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache License 2.0" }
authors = [
  { name = "hiro9" }
]
dependencies = [
  "mcp>=1.0,<2"
]

[project.scripts]
otomekairo-mcp-client-connector = "otomekairo_mcp_client_connector.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
